[package]
name = "minifb_fonts"
version = "0.1.3"
edition = "2021"
authors = ["p9436 <vadym.lukavyy@gmail.com>"]
description = "Simple Addon for the minifb crate that enables drawing text using bitmap fonts."
readme = "README.md"
repository = "https://github.com/p9436/rust_minifb_fonts"
license = "MIT"
keywords = ["gamedev", "graphics", "minifb", "font", "bitmap"]

exclude = ["assets/", ".*"]

[lib]
name = "minifb_fonts"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
minifb = "0.25.0"
